<resources>
    <string name="app_name">Take A Photo For Me</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Take A Photo For Me</string>
    <string name="create_account">Créer un compte</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="title_activity_display">Take A Photo For Me</string>
	<string name="email_format_error">"Le champs email ne correspond pas au format d'une adresse mail"</string>
	<string name="email_or_password_empty">"L'adresse email et mot de passe sont obligatoires"</string>
	<string name="different_password">Les deux mots de passe doivent être identiques</string>
	<string name="login_exist">Ce login existe déjà</string>
	<string name="login_min">La taille minimun du login est de 4 caractères</string>
	<string name="pass_min">La taille minimun du mote de passe est de 4 caractères</string>
	<string name="menu_save">Valider la demande</string>
	<string name="menu_refresh">Rafraichir</string>
	<string name="title_section1">Faire une demande</string>
    <string name="title_section2">Voir les demandes</string>
    <string name="title_section3">Gérer mes demandes</string>
    <string name="action_settings">Parametres</string>
    <string name="textview">TextView</string>
    <string name="capture">Prendre la photo</string>
    <string name="erreur_connextion">"Erreur de connexion au serveur, vérifier vôtre connexion puis réessayer"</string>
    <string name="erreur_current_user">"Erreur Utilisateur Courant"</string>
    <string name="zoomInf">"-"</string>
    <string name="zoomSup">"+"</string>    
    <string name="title_activity_login_display">TAP</string>    
    <string name="prendre_photo">Prendre Photo</string>    
    <string name="str_lat">"Latitude : "</string>    
    <string name="str_lng">"Longitude : "</string>    
    <string name="str_desc">"Description : "</string>    
    <string name="str_lat_value">0.00</string>    
    <string name="str_lng_value">0.00</string>    
    <string name="str_desc_value">Ici, la description de la demande saisie par un utilisateur</string>    
    <string name="button_refuser">Rejetter</string>    
    <string name="button_accepter">Enregistrer</string>    
    <string name="label_visu_demande">Voici les détails de cette demande</string> 
</resources>